test/fail/sub_empty_stack.avm
; sub on an empty stack
sub
exit